made changes